--- a/yavga_papilio_summary.html
+++ b/yavga_papilio_summary.html
@@ -2,28 +2,30 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>yavga_papilio Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>yavga_papilio Project Status (01/22/2014 - 02:38:06)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>yavga-P1_500K.xise</TD>
+<TD>yavga-P1_250K.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>yavga_papilio</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>New</TD>
+<TD>Synthesized</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xc3s500e-4vq100</TD>
+<TD>xc3s250e-4vq100</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.2</TD>
+<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.6</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/maxwell/GitHub/VGA/_xmsgs/*.xmsgs?&DataKey=Warning'>26 Warnings (16 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -40,7 +42,10 @@
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
-<TD>&nbsp;</TD>
+<TD>
+<A HREF_DISABLED='/home/maxwell/GitHub/VGA/yavga_papilio_envsettings.html'>
+System Settings</A>
+</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
 <TD>&nbsp;&nbsp;</TD>
 </TR>
@@ -48,7 +53,41 @@
 
 
 
-
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Device Utilization Summary (estimated values)</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary(estimatedvalues)"><B>[-]</B></a></TD></TR>
+<TR ALIGN=CENTER BGCOLOR='#FFFF99'>
+<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slices</TD>
+<TD ALIGN=RIGHT>111</TD>
+<TD ALIGN=RIGHT>2448</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>4%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
+<TD ALIGN=RIGHT>99</TD>
+<TD ALIGN=RIGHT>4896</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>2%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
+<TD ALIGN=RIGHT>171</TD>
+<TD ALIGN=RIGHT>4896</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>3%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>66</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>9%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BRAMs</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>50%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of GCLKs</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>4%</TD>
+</TR>
+</TABLE>
 
 
 
@@ -60,7 +99,7 @@
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD>Synthesis Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/maxwell/GitHub/VGA/yavga_papilio.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>mié ene 22 02:38:06 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/maxwell/GitHub/VGA/_xmsgs/xst.xmsgs?&DataKey=Warning'>26 Warnings (16 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/maxwell/GitHub/VGA/_xmsgs/xst.xmsgs?&DataKey=Info'>17 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -74,5 +113,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 01/31/2011 - 11:52:16</center>
-</BODY></HTML>
+<br><center><b>Date Generated:</b> 01/22/2014 - 02:38:06</center>
+</BODY></HTML
